--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -21,7 +21,7 @@
     </div><br>
 
     <% if @announcement.id %>
-      <div class="actions"><%= f.submit  "Update Announcement", class: "btn btn-default"%></div>
+      <div class="actions links-on-bottom"><%= f.submit  "Update Announcement", class: "btn btn-info"%></div>
     <% else %>
       <div class="actions links-on-bottom"><%= f.submit  "Add Announcement", class: "btn btn-info"%></div>
     <% end %><br>
