--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
 	<%= render 'form' %>
 
-	<div class="link">
+	<div class="link links-on-bottom">
 		<%= link_to 'Show', @announcement %> |
 		<%= link_to 'Back', :back %>
 	</div>
