--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,7 +2,7 @@
 	<h1>Edit Your Comment</h1>
 	<%= render 'form' %>
 
-	<div class="link">
+	<div class="link links-on-bottom">
 		<%= link_to 'Back', :back %>
 	</div>
 </div>
