--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,7 +3,7 @@
 	<h1>Edit Your Post</h1>
 	<%= render 'form' %>
 
-	<div class="link">
+	<div class="link links-on-bottom">
 		<%= link_to 'Back', :back %>
 	</div>
 </div>
