--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 
 
 	<div class="container">
-		<% @user.invited_trips.each do |trip| %>
+		<% @trips.each do |trip| %>
 		  <div class="col-md-4 col-sm-6 portfolio-item">
 		    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
 		      <div class="portfolio-hover">
