--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,10 +22,12 @@
 						<%= link_to "", like_path(@post), class: "glyphicon glyphicon-thumbs-up" %>  
 					<% end %>
 				</div>
-				<div class="panel-bottom pull-right"> 
-					<%= link_to "", edit_post_path(@post), class: "glyphicon glyphicon-pencil" %>  | 
-					<%= link_to "", post_path, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
-			  </div>
+				<% if @post.user == current_user %>
+					<div class="panel-bottom pull-right"> 
+						<%= link_to "", edit_post_path(@post), class: "glyphicon glyphicon-pencil" %>&nbsp;  | &nbsp;
+						<%= link_to "", post_path, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
+				  </div>
+			  <% end %>
 		</div><br>
 	</div>
 		
@@ -38,10 +40,12 @@
 		<% @post.comments.each do |comment| %>
 			<div class="row panel comment">
 				<div class="pull-left"><%= link_to "#{comment.user.name}", edit_comment_path(comment) %>: <%= comment.content %></div>
-				<div class="pull-right">
-					<%= link_to "", edit_comment_path(comment), class: "glyphicon glyphicon-pencil" %>&nbsp; | &nbsp;
-					<%= link_to "", comment_path(comment), class: "glyphicon glyphicon-trash",  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%>
-				</div>
+				<% if @comment.user == current_user %>
+					<div class="pull-right">
+						<%= link_to "", edit_comment_path(comment), class: "glyphicon glyphicon-pencil" %>&nbsp; | &nbsp;
+						<%= link_to "", comment_path(comment), class: "glyphicon glyphicon-trash",  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%>
+					</div>
+				<% end %>
 			</div><br>
 		<% end %>
 		<%= render '/comments/form' %>
